Bug 1077402 - Lock monitor when accessing overscrolling transform. r=kats